--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules index.ts",
     "build": "npx tsc",
     "start": "node dist/index.js"
